# ChangeLog for app-misc/cl-tools-meta
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*cl-tools-meta-11.3-r1 (12 Mar 2011)

  12 Mar 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-tools-meta-11.3.ebuild, +cl-tools-meta-11.3-r1.ebuild:
  removed hotplug

*cl-tools-meta-11.3 (09 Mar 2011)

  09 Mar 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-tools-meta-11.0-r10.ebuild, +cl-tools-meta-11.3.ebuild:
  Version bump. # Please enter the ChangeLog message for your changes. Lines
  starting

*cl-tools-meta-11.0-r10 (08 Mar 2011)

  08 Mar 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-tools-meta-11.0-r9.ebuild, +cl-tools-meta-11.0-r10.ebuild:
  Add sys-apps/lm_sensors in CDS and CMC.

*cl-tools-meta-11.0-r9 (19 Feb 2011)

  19 Feb 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-tools-meta-11.0-r8.ebuild, +cl-tools-meta-11.0-r9.ebuild:
  remove calculate utilities

*cl-tools-meta-11.0-r8 (10 Feb 2011)

  10 Feb 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-tools-meta-11.0-r6.ebuild, -cl-tools-meta-11.0-r7.ebuild,
  +cl-tools-meta-11.0-r8.ebuild:
  Add sys-apps/ethtool

*cl-tools-meta-11.0-r7 (06 Feb 2011)

  06 Feb 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  cl-tools-meta-11.0-r6.ebuild, +cl-tools-meta-11.0-r7.ebuild:
  Add sys-power/powertop in desktops and CMC

*cl-tools-meta-11.0-r6 (31 Jan 2011)

  31 Jan 2011; Alexander Tratsevskiy (L'autre)
  <at@calculate.ru> -cl-tools-meta-11.0-r5.ebuild,
  +cl-tools-meta-11.0-r6.ebuild:
  Added iotop

*cl-tools-meta-11.0-r5 (31 Jan 2011)

  31 Jan 2011; Alexander Tratsevskiy (L'autre)
  <at@calculate.ru> -cl-tools-meta-11.0-r4.ebuild,
  +cl-tools-meta-11.0-r5.ebuild:
  Added sys-apps/xinetd

*cl-tools-meta-11.0-r4 (17 Jan 2011)

  17 Jan 2011; Alexander Tratsevskiy (L'autre)
  <atratsevskiy@gentoo.org> -cl-tools-meta-11.0-r3.ebuild,
  +cl-tools-meta-11.0-r4.ebuild:
  Added sys-apps/gdisk
