@@ -1,2 +1,2 @@
-EBUILD cl-tools-meta-11.3-r1.ebuild 2905 RMD160 967aa0a14c73dda32eee608ce386e914480eb7bc SHA1 b892768a7e898a6a9e45130a942aa370ab63ac59 SHA256 4d2d28daadd056dab63ab03d0dcf4816a4a14e6952113b298f74b46d24143b07
-MISC ChangeLog 2652 RMD160 cf379606ffcce9ca5feefd638e0d8595939183cc SHA1 5497aa0159377088ed9f18f71dfb05a995af6672 SHA256 da491cf99b8d1fe749fcd51a54985db5dc1d20d291ef558a4d718dc1108440c5
+EBUILD cl-tools-meta-11.3-r2.ebuild 2965 RMD160 a9e2132200bad30e53667b877a54e47313730497 SHA1 baf1017cab1f7e2e340ee00cb3fbd35246b6aa84 SHA256 a9f53c175f90800f0f91f18de4b2dff27858d02fa5a07da82ed95f0f475c3921
+MISC ChangeLog 2847 RMD160 0bd932afdee7204baeb030d29aaf000ac7f3e0f4 SHA1 9f08ffd76874658519cbf67b41c1b4798d89a1dc SHA256 7aba76cf2c810b4996900b99d02f87ce21126eb1ce509f34f37f75b3f9e30b3f
