@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cl-tools-meta-11.3-r2 (18 Mar 2011)
+
+  18 Mar 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  -cl-tools-meta-11.3-r1.ebuild, +cl-tools-meta-11.3-r2.ebuild:
+  Add USE calculate_noarch
+
 *cl-tools-meta-11.3-r1 (12 Mar 2011)
 
   12 Mar 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
